2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/bindings/lua/Avatar.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h: updated bindings

2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: updated for terrain files being moved to separate directory

2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntity.cpp, src/components/ogre/EmberEntity.h, src/components/ogre/EmberEntityFactory.cpp, src/components/ogre/EmberEntityFactory.h, src/components/ogre/EmberOgre.cpp, src/components/ogre/Makefile.am, src/components/ogre/MotionManager.cpp, src/components/ogre/MotionManager.h, src/components/ogre/WorldEmberEntity.cpp: updated for terrain files being moved to separate directory

2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/MakeEntityWidget.cpp: updated for terrain files being moved to separate directory, also check if the user is a creator when creating new entities

2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/environment/Foliage.cpp, src/components/ogre/environment/FoliageArea.cpp, src/components/ogre/environment/Sky.cpp: updated for terrain files being moved to separate directory

2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/SceneManagers/EmberPagingSceneManager/src/EmberPagingLandScapeData2D_HeightField.cpp, src/components/ogre/SceneManagers/EmberPagingSceneManager/src/EmberPagingLandScapeTexture.cpp: updated for terrain files being moved to separate directory

2006-09-21 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/terrain/TerrainArea.cpp, src/components/ogre/terrain/TerrainGenerator.cpp, src/components/ogre/terrain/TerrainGenerator.h, src/components/ogre/terrain/TerrainPage.cpp, src/components/ogre/terrain/TerrainPage.h, src/components/ogre/terrain/TerrainShader.h: moved to separate directory
