@@ -1,0 +1,6 @@
+INCLUDES = -I$(top_srcdir)/src  -I$(top_builddir)/src -DPREFIX=\"@prefix@\"
+METASOURCES = AUTO
+noinst_LIBRARIES = libTerrain.a
+libTerrain_a_SOURCES = TerrainArea.cpp TerrainArea.h TerrainEditor.cpp\
+	TerrainEditor.h TerrainGenerator.cpp TerrainGenerator.h TerrainPage.cpp\
+	TerrainPage.h TerrainShader.cpp TerrainShader.h
